--- a/code/01-starting-project/src/index.css
+++ b/code/01-starting-project/src/index.css
@@ -73,6 +73,15 @@ button {
   cursor: pointer;
 }
 
+button:disabled,
+button:disabled:hover,
+button:disabled:active {
+  background-color: rgb(204, 188, 188);
+  border-color: rgb(95, 95, 95);
+  color: #292929;
+  cursor: not-allowed;
+}
+
 button:hover,
 button:active {
   background-color: #33059e;
